<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfd8dc"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.whitehat.mikroletmalang.activity.AboutApp"
    tools:showIn="@layout/activity_about">

    <ImageView
        android:id="@+id/imagelogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_logo_desc"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textmikrolet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagelogo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/mikrolet_malang"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textmikrolet"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:contentDescription="@string/image_foto_desc"
            app:srcCompat="@drawable/imdad" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/imdad_rabbani"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/teknik_informatika"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="7dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/uin_maulana_malik_ibrahim"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/malang"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/image_logo_desc"
            app:srcCompat="@drawable/instagram_" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/image_logo_desc"
            app:srcCompat="@drawable/facebook_" />

    </LinearLayout>

</RelativeLayout>
